--- a/app/views/tandem/pages/show.html.slim
+++ b/app/views/tandem/pages/show.html.slim
@@ -1,4 +1,6 @@
 #tandem-defaults
+  = tandem_page_links
+
   p#notice = notice
   = tandem_text_tag(@page, :sidebar_text)
   = tandem_image_tag(@page, :image_test)
