--- a/app/views/tandem/contents/_form.html.slim
+++ b/app/views/tandem/contents/_form.html.slim
@@ -1,4 +1,5 @@
-#tandem-editor    
+#tandem-editor
+  h4.tandem-logo
   = form_for [@page, @content], url: page_content_path(@page.id,@content.id) do |f|
     -if @content.errors.any?
       #tandem_error_explanation
