--- a/app/assets/stylesheets/tandem/contents.scss
+++ b/app/assets/stylesheets/tandem/contents.scss
@@ -5,7 +5,34 @@
 
 @import "variables";
 
-
+body.admin-bar {
+  margin-top: 35px;
+}
+#tandem_page_links {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 35px;
+  line-height: 35px;
+  width: 100%;
+  background: #333;
+  margin: 0;  
+  padding: 0 10px;  
+  border-bottom: 1px solid $darkblue;
+  li {
+    display: inline;    
+    padding: 0 20px;
+    a, a:active, a:visited {
+     color: $lightblue;
+     text-decoration: none; 
+     &:hover {color: #aaa;}
+    }
+  }
+  a#page_new_link {
+    background: transparent url(image_path('tandem/tandem_logo_nav.png')) left no-repeat;
+    padding-left: 100px;
+  }
+}
 .tandem_content:hover {
   outline: 1px solid $midblue;
 }
@@ -35,31 +62,7 @@ a.tandem_edit_link:visited {
   }
 }
 
-#tandem_page_links {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  z-index: 900;
-  width: 100%;
-  background: #333;
-  margin: 0;  
-  padding: 10px;  
-  text-align: right;
-  box-shadow: 0px 0px 8px #000;
-  border-top: 1px solid $darkblue;
-  opacity: 0.9;
-  -moz-opacity: 0.9;
-  filter:alpha(opacity=90);
-  li {
-    display: inline;    
-    padding: 0 20px;
-    a, a:active, a:visited {
-     color: #fff;
-     text-decoration: none; 
-     &:hover {color: $darkblue;}
-    }
-  }
-}
+
 
 /////// Tandem Editor
 h4.tandem-logo {
