[#25126591] advanced settings slider

--- a/app/views/tandem/contents/_form.html.slim
+++ b/app/views/tandem/contents/_form.html.slim
@@ -30,7 +30,7 @@
 
 
     #tandem_advanced_settings
-      a href="/" Advanced Settings
+      h3.settings-toggle Advanced Settings
       .advanced-settings
         .field
           = f.label :link_url
