--- a/app/views/tandem/pages/_form.html.slim
+++ b/app/views/tandem/pages/_form.html.slim
@@ -35,7 +35,7 @@
         = f.select :template, options_for_select(valid_templates, @page.template), :include_blank => true        
         
     #tandem_advanced_settings
-      a href="/" Advanced Settings
+      h3.settings-toggle Advanced Settings
       .advanced-settings
         .field
           = f.label :page_label
