[#25064877] playing with getting rid of iframes

--- a/app/views/tandem/contents/_form.html.slim
+++ b/app/views/tandem/contents/_form.html.slim
@@ -1,4 +1,5 @@
-#tandem-editor
+// This is the form that controls Image upload and Text Editor
+#tandem-editor-wym
   h4.tandem-logo
   = form_for [@page, @content], url: page_content_path(@page.id,@content.id) do |f|
     -if @content.errors.any?
