--- a/app/views/tandem/pages/_form.html.slim
+++ b/app/views/tandem/pages/_form.html.slim
@@ -1,4 +1,6 @@
+// This form controls New Page, Edit Page
 #tandem-editor
+  h4.tandem-logo
   = form_for @page do |f|
     -if @page.errors.any?
       #error_explanation
