--- a/app/assets/stylesheets/tandem/contents.scss
+++ b/app/assets/stylesheets/tandem/contents.scss
@@ -85,6 +85,12 @@ h4.tandem-logo {
 /////// Contents, Page, & Image Editor
 
 #tandem-editor {
+  width: 600px;
+}
+#tandem-editor-wym {
+  width: 100%;
+}
+#tandem-editor, #tandem-editor-wym {
   h1.tandem-title {
     font-size: 18px;
     @include goo;
@@ -102,6 +108,7 @@ h4.tandem-logo {
   iframe{
     border:none;
     height: 100%;
+    width: 100%;
   }
   a.use {
     font-size: 15px; 
@@ -122,7 +129,7 @@ h4.tandem-logo {
       @include goo;
       color: $darkblue;
       width: 100px;
-      padding: 3px 0;
+      padding: 0;
       text-align: left;
       font-size: 14px;
       margin-left: 10px;  
@@ -134,15 +141,19 @@ h4.tandem-logo {
       @include radius(3px);
       box-shadow: 0 0 5px #aaa;
       padding: 5px;
+      position:relative;
     }
+    input#page_is_default, input#page_parent_id_, input#page_parent_id_1 {top:5px;}
     .field {
-      margin: 3px 0;
+      margin: 15px 0;
       @include goo;
     }
     .field span {
       font-size: 14px;
       color: $darkblue;
-      padding-right: 10px;
+      padding: 0 10px 0 5px;
+      position: relative;
+      top: 5px;
     }
    .wym_box {
      background: none;
@@ -194,6 +205,7 @@ h4.tandem-logo {
   }
 } // end tandem editor
 
+.wym {width: 100%;}
 
 /// Image Upload Modal
 
@@ -318,14 +330,22 @@ iframe {
 /// Advanced Settings
 
 #tandem_advanced_settings {
-  margin: 45px 0 15px 0;
-  a {
-    font-size: 15px;
+  margin: 0 0 15px 0;
+  border-top: 1px dotted $lightblue;
+  h3 {
+    cursor: pointer;
+    font-size: 13px;
+    font-weight: normal;
     display: block;
     margin: 10px;
     color: $darkblue;
     text-decoration: none;
     @include goo;
+    padding: 3px 0 0 20px;
+    background: transparent url(image_path('tandem/ic-star.png')) left no-repeat;
+  }
+  h3:hover {
+    color: #333;
   }
   div.advanced-settings {
     display: none;
