--- a/app/views/tandem/images/_form.html.slim
+++ b/app/views/tandem/images/_form.html.slim
@@ -1,14 +1,15 @@
 #tandem-upload-image
-  h3.tandem-mod-title Upload a New Image
   = form_for @image, :html => { :multipart => true } do |f|
+
     -if @image.errors.any?
       #error_explanation
         h2 = "#{pluralize(@image.errors.count, "error")} prohibited this image from being saved:"
         ul
           - @image.errors.full_messages.each do |msg|
             li= msg
-
-    .field
-      = f.file_field :resource
-    .actions
-      = f.submit 'Upload'
+    input#upload-button value="Upload a New Image" type="submit
+    
+    / .field
+    /   = f.file_field :resource
+    / .actions
+    /   = f.submit 'Upload'
