--- a/app/views/tandem/pages/show.html.slim
+++ b/app/views/tandem/pages/show.html.slim
@@ -22,7 +22,7 @@
       pre tandem_image_tag.
     p 
       | Simply insert those into your templates where you want the user to be able to edit content and Tandem will take care of the rest. 
-      pre <div id="sidebar"><%= tandem_image_tag(@page, :sidebar_image)<%= tandem_text_tag(@page, :sidebar_text)</div>
+      pre <div id="sidebar"><%= tandem_image_tag(@page, :sidebar_image) %><%= tandem_text_tag(@page, :sidebar_text) %></div>
     
     h3 Navigation
 
