--- a/app/assets/stylesheets/tandem/contents.scss
+++ b/app/assets/stylesheets/tandem/contents.scss
@@ -209,6 +209,10 @@ h4.tandem-logo {
 
 /// Image Upload Modal
 
+form.edit_content_image{
+  width:33%;
+  float:left;
+}
 h3.tandem-mod-title {
   font-size: 15px;
   @include goo;
@@ -217,7 +221,8 @@ h3.tandem-mod-title {
   margin: 10px 0;
 }
 div#tandem-image-editor {
-
+  width:66%;
+  float:left;
 }
 #tandem-image-editor div#gallery-image {
 width: 100%;
@@ -237,9 +242,14 @@ iframe {
     margin: 10px 0;
   }
 }
+section#tandem_image_gallery ul{
+  list-style:none;
+  
+  li {
+    float:left;
+  }
+}
 div#current-image {
-  width: 49%;
-  float: left;
   h3 {
     font-size: 15px;
     @include goo;
