--- a/app/assets/stylesheets/tandem/contents.scss
+++ b/app/assets/stylesheets/tandem/contents.scss
@@ -247,6 +247,10 @@ section#tandem_image_gallery ul{
   
   li {
     float:left;
+
+    img:hover {
+      cursor:pointer;
+    }
   }
 }
 div#current-image {
