[Completes #24448463] When an image in the gallery is clicked, update current image and set the id for the image content form.

--- a/app/assets/stylesheets/tandem/contents.scss
+++ b/app/assets/stylesheets/tandem/contents.scss
@@ -248,6 +248,10 @@ section#tandem_image_gallery ul{
   
   li {
     float:left;
+
+    img:hover {
+      cursor:pointer;
+    }
   }
 }
 div#current-image {
