--- a/app/assets/stylesheets/tandem/contents.scss
+++ b/app/assets/stylesheets/tandem/contents.scss
@@ -293,12 +293,17 @@ div#current-image {
   padding: 0 0;
   margin: 0;
   @include goo;  
-  input#upload-button {
-    padding: 15px 10px;
+  span#upload-button {
+//    display: none;
+    display: block;
+    width: 200px;
+    padding: 10px 0 10px 10px;
+    height: 20px;
+    margin-top: 10px;
     color: #407992;
     @include radius(5px);
     border: 1px solid #c3cace;
-    font-size: 22px;
+    font-size: 18px;
     -webkit-box-shadow: 0px 0px 7px #ccc;
     -moz-box-shadow: 0px 0px 7px #ccc;
     box-shadow: 0px 0px 7px #ccc;
@@ -313,9 +318,29 @@ div#current-image {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9f3f8', endColorstr='#dbe9f0',GradientType=0 ); /* IE6-9 */
     @include goo;
     cursor: pointer;
-    -moz-transition: opacity 8s ease-in-out;
-    -webkit-transition: opacity 8s ease-in-out;
-     transition: opacity 8s ease-in-out;  
+    position: relative;
+    &#upload-button:hover {
+     background: #e5e5e5; /* Old browsers */
+     background: -moz-linear-gradient(top,  #e5e5e5 0%, #d1d1d1 100%); /* FF3.6+ */
+     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e5e5e5), color-stop(100%,#d1d1d1)); /* Chrome,Safari4+ */
+     background: -webkit-linear-gradient(top,  #e5e5e5 0%,#d1d1d1 100%); /* Chrome10+,Safari5.1+ */
+     background: -o-linear-gradient(top,  #e5e5e5 0%,#d1d1d1 100%); /* Opera 11.10+ */
+     background: -ms-linear-gradient(top,  #e5e5e5 0%,#d1d1d1 100%); /* IE10+ */
+     background: linear-gradient(top,  #e5e5e5 0%,#d1d1d1 100%); /* W3C */
+     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5e5e5', endColorstr='#d1d1d1',GradientType=0 ); /* IE6-9 */
+     color: #fff;
+     border-color: #aaa;
+     cursor: pointer;
+    }
+     input#image_resource {
+       opacity: 0;
+       -moz-opacity: 0;
+       filter:alpha(opacity=0);    
+       position: absolute;
+       top: 0;
+       left: 0;
+       cursor: pointer;
+     }
   }
   input#upload-button:hover {
     background: #eee;
