--- a/app/assets/stylesheets/tandem/contents.scss
+++ b/app/assets/stylesheets/tandem/contents.scss
@@ -340,6 +340,7 @@ div#current-image {
        top: 0;
        left: 0;
        cursor: pointer;
+       width: 200px;
      }
   }
   input#upload-button:hover {
