--- a/app/assets/stylesheets/tandem/contents.scss
+++ b/app/assets/stylesheets/tandem/contents.scss
@@ -100,12 +100,11 @@ h4.tandem-logo {
     margin: 10px 0;
   }
   h3#selected_image_title {
-    font-size: 15px;
+    font-size: 20px;
     @include goo;
-    color: $darkblue;
+    color: #407992;
     font-weight: normal;
-    margin: 10px 0;
-    
+    margin: 15px 0;
   }
   iframe{
     border:none;
@@ -191,19 +190,36 @@ h4.tandem-logo {
     padding: 2px 3px;    
   } // end wym-section
   .actions {
-    margin: 15px 10px;    
+//    margin: 15px 10px;    
     input.wymupdate,input.save {
-      background: $lightblue;
-      color: $darkblue;
-      font-size: 16px;
-      @include radius(3px);
-      border: 1px solid $midblue;
+      background: #4ba9d8;
+      color: #fff;
+      font-size: 18px;
+      @include radius(8px);
+      border: 1px solid #4ba9d8;
       cursor: pointer;
+      padding: 8px 10px;     
+      @include goo;
       &:hover {color: #fff;background: $darkblue;}      
     }      
   } // end actions  
   #error_explanation {
     @include errors;
+  }
+  ul#tandem_image_attributes {
+    margin: 0;
+    padding: 0;
+    li {
+      list-style: none;
+      padding: 5px;
+      list-position: inside;
+      @include goo;
+      color: #3e4c52;
+      font-size: 12px;
+    }
+    li.image_name {
+      font-size: 16px;
+    }
   }
 } // end tandem editor
 
@@ -212,9 +228,18 @@ h4.tandem-logo {
 /// Image Upload Modal
 
 form.edit_content_image{
-width: 25%;
+width: 24%;
 float: left;
+padding-left: 1%;
+
 }
+
+div#tandem-image-editor {
+  width:73%;
+  float:left;
+  border-left: 1px solid $lightblue;
+}
+//
 h3.tandem-mod-title {
   font-size: 15px;
   @include goo;
@@ -222,16 +247,12 @@ h3.tandem-mod-title {
   font-weight: normal;
   margin: 10px 0;
 }
-div#tandem-image-editor {
-  width:73%;
-  float:left;
-  border-left: 4px solid $lightblue;
-  padding-left: 15px;
-}
+
 #tandem-image-editor div#gallery-image {
 width: 100%;
 padding: 0;
 margin: 0;
+
 iframe {
 	width: 90%;
 	padding: 0;
@@ -246,55 +267,97 @@ iframe {
     margin: 10px 0;
   }
 }
+/* force to show scrollbars in webkit browsers */
+::-webkit-scrollbar {
+	-webkit-appearance: none;
+	width: 7px;
+}
+::-webkit-scrollbar-thumb {
+	border-radius: 4px;
+	background-color: rgba(0,0,0,.5);
+	-webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
 section#tandem_image_gallery {
+  max-height:400px;
+  overflow-y: scroll;
+  border-top: 1px solid $lightblue;
+  margin: 10px 0;
   h1 {
     font-weight: normal;
     color: $darkblue;
     font-size: 15px;
     @include goo;
   }
-  div.table {
-    display: table;
-    margin: 0 auto;
-  }
   ul {
     list-style:none;
     li {
       float:left;
       display: block;
-      width: 150px;
-      height: 150px;
-      border: 2px solid $lightblue;
-      text-align: center;
-      vertical-align: middle;
-      margin: 2%;
-      img {
+      width: 180px;
+      height: 130px;
+      margin: 0 10px 40px 10px;
+      padding: 10px 5px 5px 5px;
+      background: $lightblue;
+        span {
+          display: block;
+          width: 150px;
+          height: 80px;
+          margin: 0 auto;
+          overflow: hidden;  
+          text-align:center;
+        }
+        img {
+        margin: 0 auto;      
+        background: #fff;
+        height: 100%;
+        }
         
-      }
-      img:hover {
-        cursor:pointer;
+        p {
+          @include goo;
+          color: $darkblue;
+          display:block;
+          clear:both;
+          font-size: 12px;
+          text-align: center;
+          position: relative;
+          padding: 5px 0;
+          a.delete_image {
+            display: block;
+            width: 16px;
+            height: 16px;
+            background: transparent url(image_path('tandem/ic-delete_image.png')) 0 0 no-repeat;
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            cursor: default;
+            &:hover {
+             opacity: 0.5;
+             -moz-opacity: 0.5;
+             filter:alpha(opacity=50); 
+            }
+          }
+        }
+        &:hover {         
+         cursor: pointer;
+         -webkit-box-shadow: 0 0 20px rgba(122,122,122, .5);
+         -moz-box-shadow: 0 0 20px rgba(122,122,122, .5);
+         box-shadow: 0 0 20px rgba(122,122,122, .5);
+         -webkit-transform: rotate(0deg) scale(1.05);
+         -moz-transform: rotate(0deg) scale(1.05);
+         transform: rotate(0deg) scale(1.05);
+         z-index: 300;
+        }
         
-      }
     }
-  }
-}
-div#current-image {
 
-  h3 {
-    font-size: 15px;
-    @include goo;
-    color: $darkblue;
-    font-weight: none;
-    margin: 10px 0;
   }
 }
 
 #tandem-upload-image {
-  padding: 0 0;
-  margin: 0;
+  padding: 0;
+  margin: 0 0 0 20px;
   @include goo;  
   span#upload-button {
-//    display: none;
     display: block;
     width: 200px;
     padding: 10px 0 10px 10px;
@@ -355,50 +418,7 @@ div#current-image {
 
 /// Tandem Gallery
 
-.tandem-gallery {
-  img {
-    border: 5px solid $lightblue;
-  }
-  ul { 
-    margin: 0;
-    padding: 0;
-    li {
-      list-style: none;
-      border-bottom: 1px solid $lightblue;
-      position: relative;
-      padding: 10px 5px 8px 5px;
-      &.chosen {background: #f9fcfd;}
-    ul.actions {
-      border-bottom: none;
-      li {
-        position: absolute;
-        top: 0;
-        right: 0;        
-        display: inline;
-        border-bottom: none;   
-        padding: 5px 0;    
-        margin: 5px 0; 
-          a, a:active, a:visited {
-            font-size: 14px;
-            color: $darkblue;
-            padding: 2px 0;
-            @include goo;
-            text-decoration: none;
-            padding: 0 5px;
-          }
-          a.delete {color: $red;}
-          a:hover {color: $midblue;}
-        }
-      }
-    }
-  }
-  .thumb {
-    max-width: 50px;
-    max-height: 50px;
-    overflow: hidden;
-    border: 5px solid $lightblue;    
-  }
-}// end tandem gallery
+
 
 
 /// Colorbox Overwrites
@@ -463,7 +483,6 @@ form.edit_content_image div#tandem_advanced_settings .advanced-settings {
      }
    }
 }
-
 
 /* new clearfix */
 .clearfix:after {
