--- a/app/views/tandem/images/_form.html.slim
+++ b/app/views/tandem/images/_form.html.slim
@@ -10,4 +10,8 @@
     span#upload-button
       | Upload a New Image
       = f.file_field :resource
+    div.loader
+      div.range style="width: 100px"
+        span 50%
+          
 
