--- a/app/views/tandem/images/_form.html.slim
+++ b/app/views/tandem/images/_form.html.slim
@@ -11,7 +11,7 @@
       | Upload a New Image
       = f.file_field :resource
     div.loader
-      div.range style="width: 100px"
-        span 50%
+      div.range 
+        span 0%
           
 
