--- a/app/views/tandem/pages/show.html.slim
+++ b/app/views/tandem/pages/show.html.slim
@@ -6,11 +6,11 @@
   .container_12.row.clearfix
     p#notice = notice
     .grid_12.span12
-      = tandem_image_tag(@page, :default_image)
+      = tandem_image_tag(:default_image)
     .grid_7.span7
-      = tandem_text_tag(@page, :tandem_text_block)
+      = tandem_text_tag(:tandem_text_block)
     .grid_5.span5
-      = tandem_text_tag(@page, :tandem_sidebar)      
+      = tandem_text_tag(:tandem_sidebar)      
 
   - unless @page.persisted?
     | This is the default page content and should tell the user to go create a page
