[#24418435] Make can? methods inside page_helpers reference Tandem's can? method and not look at whatever the current page's helpers are.

--- a/spec/dummy/app/views/widgets/index.html.erb
+++ b/spec/dummy/app/views/widgets/index.html.erb
@@ -20,4 +20,7 @@
 
 <br />
 
+<%= tandem_text_tag(:widget_blurb) %>
+<%= tandem_navigation_tag(@page) %>
+
 <%= link_to 'New Widget', new_widget_path %>
