[Fixes #26314947] Include ContentsHelper in PagesHelper, so methods that PagesHelper uses are also included in the main app correctly.

--- a/spec/dummy/app/views/widgets/index.html.erb
+++ b/spec/dummy/app/views/widgets/index.html.erb
@@ -21,6 +21,7 @@
 <br />
 
 <%= tandem_text_tag(:widget_blurb) %>
+<%= tandem_image_tag(:widget_images) %>
 <%= tandem_navigation_tag(@page) %>
 
 <%= link_to 'New Widget', new_widget_path %>
