[#26463195] Made the page form a remote form and handled the response via jQuery. Also modified the pages_controller to be more like a regular controller, instead of rendering some special success template.

--- a/app/views/tandem/pages/_form.html.slim
+++ b/app/views/tandem/pages/_form.html.slim
@@ -1,6 +1,6 @@
 // This form controls New Page, Edit Page
 #tandem-editor
-  = form_for @page do |f|
+  = form_for @page, remote: true, html: { class: 'tandem-page-form' } do |f|
     -if @page.errors.any?
       #error_explanation
         h2 = "#{pluralize(@page.errors.count, "error")} prohibited this page from being saved:"
