[#28160117] Refer to explicit tandem routes everywhere
This is possibly needed just because we took out the url helper patch,
but I like it better.

--- a/app/views/tandem/images/edit.html.slim
+++ b/app/views/tandem/images/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing image
 
 == render 'form'
 
-= link_to 'Show', @image
+= link_to 'Show', tandem.image_path(@image)
 '|
-= link_to 'Back', images_path
+= link_to 'Back', tandem.images_path
 
