--- a/app/views/tandem/images/show.html.slim
+++ b/app/views/tandem/images/show.html.slim
@@ -5,6 +5,6 @@ p
   = image_tag @image.resource.url(:thumb)
 
 
-= link_to 'Edit', edit_image_path(@image)
+= link_to 'Edit', tandem.edit_image_path(@image)
 '|
-= link_to 'Back', images_path
+= link_to 'Back', tandem.images_path
