--- a/app/views/tandem/contents/_form.html.slim
+++ b/app/views/tandem/contents/_form.html.slim
@@ -1,6 +1,6 @@
 // This is the form that controls Image upload and Text Editor
 #tandem-editor-wym
-  = form_for @content, url: content_path(@content.id), remote: true, html: {class: "tandem_content_editor tandem_#{@content.class.simple_type}_editor"} do |f|
+  = form_for @content, url: tandem.content_path(@content.id), remote: true, html: {class: "tandem_content_editor tandem_#{@content.class.simple_type}_editor"} do |f|
     -if @content.errors.any?
       #tandem_error_explanation
         h2 = "#{pluralize(@content.errors.count, "error")} prohibited this content from being saved:"
