--- a/app/assets/stylesheets/tandem/scaffold.scss
+++ b/app/assets/stylesheets/tandem/scaffold.scss
@@ -51,6 +51,27 @@
     font-size: 12px;
     list-style: square;
   }
+  p#tandem-new {
+   padding: 10px 0;
+   a, a:visited, a:active {
+     @include goo;
+     background: $lightblue;
+     padding: 5px 8px;
+     color: $darkblue;
+     @include radius(5px);
+     text-decoration: none;
+     border: 1px solid $darkblue;
+     &:hover {
+       background: $darkblue;
+       color: $lightblue;
+       border-color: $lightblue;
+     }
+   } 
+   
+  }
+  table {
+    margin: 10px 0;
+  }
 } 
 
 // end tandem show page styles
