[#28118513] fixed missing bracket causing error

--- a/app/assets/stylesheets/tandem/contents.scss
+++ b/app/assets/stylesheets/tandem/contents.scss
@@ -364,7 +364,7 @@ section#tandem_image_gallery {
          transform: rotate(0deg) scale(1.05);
          z-index: 300;
         }
-        
+      }  
     }
 
   }
