--- a/app/assets/stylesheets/tandem/variables.scss
+++ b/app/assets/stylesheets/tandem/variables.scss
@@ -1,6 +1,16 @@
 // Varibles for Tandem UX
 
-@import url(http://fonts.googleapis.com/css?family=Glegoo);
+@font-face {
+  font-family: 'Glegoo';
+  src: url(image_path('tandem/glegoo-regular-webfont.eot'));
+  src: url(image_path('tandem/glegoo-regular-webfont.eot?#iefix')) format('embedded-opentype'),
+       url(image_path('tandem/glegoo-regular-webfont.woff')) format('woff'),
+       url(image_path('tandem/glegoo-regular-webfont.ttf')) format('truetype'),
+       url(image_path('tandem/glegoo-regular-webfont.svg#GlegooRegular')) format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 
 @mixin goo {
   font-family: 'Glegoo', serif;
