--- a/app/assets/stylesheets/tandem/contents.scss
+++ b/app/assets/stylesheets/tandem/contents.scss
@@ -172,6 +172,10 @@ h4.tandem-logo {
       color: #333;
       @include sans-serif;
       border: none;
+      text-transform: inherit;
+    }
+    textarea {
+      font-family: Times New Roman, serif;
     }
     select {
       width: auto;
