[#30689079] Create an integration test for tandem_resources

--- a/lib/generators/tandem/resource/templates/show.html.slim
+++ b/lib/generators/tandem/resource/templates/show.html.slim
@@ -1,1 +1,7 @@
 h2 <%= file_name.capitalize %>
+
+<% attributes.each do |attribute| -%>
+p
+  strong <%= attribute.human_name %>: 
+  = @<%= singular_table_name %>.<%= attribute.name %>
+<% end -%>
