--- a/lib/generators/tandem/resource/templates/index.html.slim
+++ b/lib/generators/tandem/resource/templates/index.html.slim
@@ -1,1 +1,22 @@
 h2 <%= file_name.titleize.pluralize %>:
+
+p= link_to 'New <%= file_name.titleize%>', new_<%= file_name %>_path
+
+table
+  thead
+    tr
+<% attributes.each do |attribute| -%>
+      th <%= attribute.human_name %>
+<% end -%>
+      th
+      th
+      th
+
+  tbody
+    = content_tag_for(:tr, @<%= plural_table_name %>) do |<%= singular_table_name %>|
+<% attributes.each do |attribute| -%>
+      td= <%= singular_table_name %>.<%= attribute.name %>
+<% end -%>
+      td= link_to 'Show', <%= singular_table_name %>
+      td= link_to 'Edit', edit_<%= singular_table_name %>_path(<%= singular_table_name %>)
+      td= link_to 'Destroy', <%= singular_table_name %>, method: :delete, data: { confirm: 'Are you sure?' }
