--- a/app/assets/stylesheets/tandem/contents.scss
+++ b/app/assets/stylesheets/tandem/contents.scss
@@ -174,6 +174,10 @@ h4.tandem-logo {
       border: none;
       text-transform: inherit;
     }
+    input[type="checkbox"], input[type="radio"] {
+      position: relative;
+      bottom: 5px;
+    }
     textarea {
       font-family: Times New Roman, serif;
     }
@@ -195,7 +199,7 @@ h4.tandem-logo {
       color: $darkblue;
       padding: 0 10px 0 5px;
       position: relative;
-      top: 0;
+      top: -5px;
     }
    .wym_box {
      background: none;
