[#30689087] Now we can edit tandem resources too

--- a/lib/generators/tandem/resource/templates/edit.html.slim
+++ b/lib/generators/tandem/resource/templates/edit.html.slim
@@ -1,1 +1,6 @@
 h2 Edit <%= file_name %>
+
+= render 'form'
+
+= link_to 'Show', @<%= singular_table_name %>
+= link_to 'Back', <%= index_helper %>_path
