[#30689107] Allow deletion of tandem resources

--- a/spec/dummy/app/views/bikes/index.html.slim
+++ b/spec/dummy/app/views/bikes/index.html.slim
@@ -17,4 +17,4 @@ table
       td= bike.color
       td= link_to 'Show', bike
       td= link_to 'Edit', edit_bike_path(bike)
-      td= link_to 'Destroy', bike, method: :delete, data: { confirm: 'Are you sure?' }
+      td= link_to 'Delete', bike, method: :delete, data: { confirm: 'Are you sure?' }
